# HomeWorkMathISU

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
qt_graphics/: main.cpp  mainscene.cpp  qt_graphics.pro
source/cpp/: Gauss.cpp  GaussTests.cpp  Interpolation.cpp  InterpolationTests.cpp  Macloren.cpp  MaclorenTests.cpp  Matrix.cpp  MatrixTests.cpp  ReverseMatrix.cpp  ReverseMatrixTests.cpp  Vectors.cpp  VectorsTests.cpp
source/headers/: Gauss.hpp  Interpolation.hpp  Macloren.hpp  Matrix.hpp  ReverseMatrix.hpp  Vectors.hpp
